<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- DATA TO SEND -->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <!-- TITLE -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        android:text="@string/data_to_send" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_edit"
                        android:layout_width="60dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:text="@string/edit"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/gray" />

                <!-- TENANT -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/tenant" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_tenant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- EMAIL -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/email" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- PASSWORD -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/password" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- APP SCHEME -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/appscheme" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_app_scheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- APP NAME -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/appname" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

                <!-- APP IDENTIFIER -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:text="@string/appidentifier" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_app_identifier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_normal"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- RECEIVED DATA -->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <!-- TITLE -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        android:text="@string/received_data"  />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        android:text=" ("
                        tools:ignore="HardcodedText" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/txt_clockins_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_large"
                        android:textStyle="bold"
                        android:text=")"
                        tools:ignore="HardcodedText"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_reset_clockins"
                        android:layout_width="60dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:background="@android:color/transparent"
                        android:text="@string/reset"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/gray" />

                <!-- DATA -->

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_clockins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/font_normal" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- BUTTON -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_send_data"
            android:text="@string/go_to_clock_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin"
            android:textColor="@color/white"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>